<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cell_text_field_background_black"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/select_function"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:src="@drawable/ic_close"
            android:tag="close" />
    </FrameLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_text_profile"
        android:gravity="center"
        android:tag="open"
        android:text="@string/open_calendar"
        android:textColor="@color/black" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_text_profile"
        android:gravity="center"
        android:tag="current"
        android:text="@string/update_current"
        android:textColor="@color/black" />

</LinearLayout>