<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/lv1" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/thong_tin_ca_nhan" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/editbox_background_normal"
        android:orientation="vertical"
        android:padding="@dimen/lv1" >

        <TextView
            android:id="@+id/profile_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/lv1"
            android:text="Taylor Swiff"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3" >

            <TextView
                android:id="@+id/profile_tv_country_lbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nationality"
                android:textColor="@color/common_signin_btn_text_light"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/profile_tv_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/no_input"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3" >

            <TextView
                android:id="@+id/profile_tv_sex_lbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sex"
                android:textColor="@color/common_signin_btn_text_light"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/profile_tv_sex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/no_input"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3" >

            <TextView
                android:id="@+id/profile_tv_email_lbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email"
                android:textColor="@color/common_signin_btn_text_light"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/profile_tv_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/secret"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/nhat_ky" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/editbox_background_normal"
        android:orientation="vertical"
        android:padding="@dimen/lv1" >

        <TextView
            android:id="@+id/profile_tv_diary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/lv1"
            android:text="@string/no_input_mood"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:src="@drawable/trinh_do_hoc_van" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/editbox_background_normal"
        android:orientation="vertical"
        android:padding="@dimen/lv1" >

        <TextView
            android:id="@+id/profile_tv_uiniversity_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/lv1"
            android:text="HO CHI MINH CITY - UNIVERSITY OF TECHNOLOGY"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profile_tv_uiniversity_major"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/lv1"
            android:text="Bachelor | Software Engineering"
            android:textColor="@android:color/black" >
        </TextView>

        <TextView
            android:id="@+id/profile_tv_uiniversity_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/lv1"
            android:text="2007 - 2012"
            android:textColor="@android:color/secondary_text_light" />

        <TextView
            android:id="@+id/profile_tv_uiniversity_descripton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/lv1"
            android:text="Android Developer"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <ImageView
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:src="@drawable/kinh_nghiem_ban_than" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/editbox_background_normal"
        android:orientation="vertical"
        android:padding="@dimen/lv1" >

        <TextView
            android:id="@+id/profile_tv_job_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/lv1"
            android:text="Android Developer"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profile_tv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/lv1"
            android:text="Freedom Company"
            android:textColor="@android:color/black" >
        </TextView>

        <TextView
            android:id="@+id/profile_tv_job_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/lv1"
            android:text="2012 - nay (2 năm)"
            android:textColor="@android:color/secondary_text_light" />

        <TextView
            android:id="@+id/profile_tv_job_descripton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/lv1"
            android:text="Two year expreiences/nAndroid Developer/nHard working"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <Button
        android:id="@+id/profile_btn_back_to_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@drawable/cell_background_footer" />

</LinearLayout>